Fix too long product tags table (mobile)

--- a/front/less/pages/product.less
+++ b/front/less/pages/product.less
@@ -145,8 +145,12 @@
 
 .product-bottom {
   float: left;
-  width: 355px;
+  width: 305px;
   padding-right: 18px;
+
+  .Q(@sm; {
+    width: 355px;
+  });
 }
 
 .product-desc {
